--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will You Be My Galentine?</title>
+    <title> My Galentine nethanya(my chotu male beti)</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
     <style>
@@ -209,8 +209,8 @@
 
     <!-- Section 1: Landing -->
     <section class="landing">
-        <h1>Will you be my Galentine?</h1>
-        <p>Because life is better with my babygurl 🎀🌸💅. ✨</p>
+        <h1> my Galentine nethanya</h1>
+        <p>my future daughter's crazy aunty</p>
         <button onclick="startExperience()" class="btn-start">Start Here 💖</button>
     </section>
 
@@ -225,18 +225,23 @@
             </div>
             <div class="memory-card">
                 <span class="emoji">🎀</span>
-                <h3>Late Night Talks</h3>
-                <p>Those late night rants and tea spilling sessions that sometimes end up with some deep conversations.</p>
+                <h3>your special</h3>
+                <p>im know im blessed to have you my most msot beautyful women ur little extra special</p>
             </div>
             <div class="memory-card">
                 <span class="emoji">🌸</span>
                 <h3>My Love</h3>
-                <p>Nobody can love you as much as I can and you know you've found the one when they can beat me in loving you.</p>
+                <p>there nothing i can tell about ur too anoying and irritating(just kidding), aur haa get boyfriend jldi so that i should not send u this every year</p>
             </div>
             <div class="memory-card">
                 <span class="emoji">💅</span>
-                <h3>Always Cheering</h3>
-                <p>Nobody can do it better than me remember that babygurl.</p>
+                <h3>Always Cheering and supporting</h3>
+                <p>your always nice to me ,i will be there for you after yor marriage also ur kids cool uncle but for all these u should not forget me after these 4 years</p>
+            </div>
+             <div class="memory-card">
+                <span class="emoji">💅</span>
+                <h3>sorry</h3>
+                <p>sorry i know i had hurted u before but remember ur little too extra special for my bye nowww</p>
             </div>
         </div>
         <a href="#question" class="btn-start" style="margin-top: 40px; background: var(--lavender); color: var(--text-color); text-decoration: none;">One more thing...</a>
