--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will You Be My Galentine?</title>
+    <title> My Galentine nethanya(chotu my beti)</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
     <style>
@@ -209,8 +209,8 @@
 
     <!-- Section 1: Landing -->
     <section class="landing">
-        <h1>Will you be my Galentine?</h1>
-        <p>Because life is better with my babygurl 🎀🌸💅. ✨</p>
+        <h1>my Galentine nethanya(chotu beti)</h1>
+        <p>what ra this for u my little extra special black rat</p>
         <button onclick="startExperience()" class="btn-start">Start Here 💖</button>
     </section>
 
@@ -220,23 +220,28 @@
         <div class="memory-container">
             <div class="memory-card">
                 <span class="emoji">😂</span>
-                <h3>Chaotic Laughs</h3>
-                <p>Those temporary characters gave us permanent gossips and laughter.</p>
+                <h3>Chaotic Laughs and fun</h3>
+                <p>everything is fun whenever ur there u keep talking u look cute surprisingly but ur annoying irritating too hatttt</p>
             </div>
             <div class="memory-card">
                 <span class="emoji">🎀</span>
-                <h3>Late Night Talks</h3>
-                <p>Those late night rants and tea spilling sessions that sometimes end up with some deep conversations.</p>
+                <h3>your cutiee behaviour</h3>
+                <p>you are really cute specially with that growing moustache , sometimes you bht jayda sundar also </p>
             </div>
             <div class="memory-card">
                 <span class="emoji">🌸</span>
-                <h3>My Love</h3>
-                <p>Nobody can love you as much as I can and you know you've found the one when they can beat me in loving you.</p>
+                <h3>My betiii</h3>
+                <p>im glad that i have a friend ,daughter like you you will always be my favourite and that  extra special gurrlll </p>
             </div>
             <div class="memory-card">
                 <span class="emoji">💅</span>
-                <h3>Always Cheering</h3>
-                <p>Nobody can do it better than me remember that babygurl.</p>
+                <h3>Always Cheering and supporting</h3>
+                <p>see ur strong u can handle everything i know and yea most imp ur a very good women with good perosnality i will be there for you alawayss</p>
+            </div>
+            <div class="memory-card">
+                <span class="emoji">💅</span>
+                <h3>about u</h3>
+                <p>jldi se apne liye u get bf coz every year i cant do this and yea all my money is urs and urs also mine i hope we continue this friendship 4 years and yea dont forget me plssss</p>
             </div>
         </div>
         <a href="#question" class="btn-start" style="margin-top: 40px; background: var(--lavender); color: var(--text-color); text-decoration: none;">One more thing...</a>
